[package]
name = "puttanesca-service"
version = "0.1.1"
authors = ["J.F. Hots", "M.C.S. Piston"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
thiserror = "1.0.49"
