[package]
name = "puttanesca-service"
version = "0.1.2"
authors = ["J.F. Hots", "M.C.S. Piston"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
select = "0.6.0-alpha.1"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
